--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.6.0",
         "autoprefixer": "^10.4.19",
         "postcss": "^8.4.39",
         "tailwindcss": "^3.4.6"
